# zyte_summit_2023

./: README.md  pyproject.toml  scrapinghub.yml  scrapy.cfg
.github/workflows/: deploy.yml
summit_2023/: items.py  loaders.py  middlewares.py  pipelines.py  settings.py  zquad.json
summit_2023/spiders/: base_spider.py  spider2.py  zquad.py
