[tool.poetry]
name = "summit-2023"
version = "0.1.0"
description = "Extraction Summit 2023"
authors = ["Dharmesh Pandav <dpandav@realla.co>"]
readme = "README.md"
packages = [{include = "summit_2023"}]

[tool.poetry.dependencies]
python = "^3.11"
# https://github.com/scrapinghub/scrapinghub-stack-scrapy
awscli = "1.29.62"
boto3 = "1.28.62"
botocore = "1.31.62"

Scrapy = "^2.11.0"
python-dateutil = "^2.8.2"
js2xml = "^0.5.0"
user-agent = "^0.1.10"
word2number = "^1.1"


[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
